# TED

./: .gitignore  README.md
tools/: get-ted-patches  make-ted-install  make-ted-packages  (+6 more)
ws/userland/src/components/desktop/mate/caja/caja-1.22.1/icons/: Makefile.am  Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/applets/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/applets/brightness/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/applets/inhibit/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/data/: Makefile.in  gnome-power-manager.desktop.in  gnome-power-preferences.desktop.in  gnome-power-statistics.desktop.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/data/icons/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/data/sounds/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/docs/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/help/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/libdbus-glib/: Makefile.in  libdbus-marshal.c  libdbus-marshal.h
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/libhal-glib/: Makefile.am  Makefile.in  libhal-marshal.c  libhal-marshal.h
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/libidletime/: Makefile.in  libidletime.c
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/libunique/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/man/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/src/: Makefile.am  Makefile.in  egg-debug.h  gpm-array-float.c  gpm-array-float.h  gpm-brightness-xrandr.c  gpm-button.c  gpm-cell-unit.c  gpm-common.c  gpm-conf.h  gpm-control.c  gpm-control.h  gpm-cpufreq.c  gpm-dpms.c  gpm-graph-widget.h  gpm-main.c  gpm-manager.c  gpm-marshal.c  gpm-marshal.h  gpm-notify.c  gpm-prefs-core.c  gpm-profile.h  gpm-screensaver.c  gpm-session.c  gpm-session.h  gpm-statistics-core.c  gpm-tray-icon.c
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/src/dbus/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/test/: Makefile.in
ws/userland/src/components/gnome/gnome-power-manager/gnome-power-manager-2.24.4/tools/: Makefile.in
(+34496 files in other folders)
