NULL=

icondir = $(datadir)/pixmaps/caja

icon_DATA =\
	audio.svg \
	backgrounds.png \
	chit_frame.png \
	colors.png \
	emblems.png \
	erase.png \
	knob.png \
	thumbnail_frame.png \
	camera.png \
	group_neg.png \
	group.png \
	mask.png \
	other_neg.png \
	other.png \
	restore-no.png \
	restore-search.png \
	restore.png \
	user_neg.png \
	user.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
